# ConsidProgrammingContest

./: .gitignore  CMakeLists.txt  README.md
contest_rules/: Consid.se — Program your way to Silicon Valley.htm
contest_rules/Consid.se — Program your way to Silicon Valley_files/: al.js  consid-scripts.js  jquery.js  track.js
i_won_page/: Consid.se — Chalmers-student bäst i programmeringstävling – belönas med resa till tech-mekka.htm
i_won_page/Consid.se — Chalmers-student bäst i programmeringstävling – belönas med resa till tech-mekka_files/: consid-scripts.js  consid-styles.css  footer.js  mailchimp.js
send_in/: CMakeLists.txt  HasDuplicates.cpp  Readme.md
src/: Main.cpp  NaiveSmartAlgorithm.cpp  NaiveSmartAlgorithm.hpp  OptimizedSmartAlgorithm.cpp  OptimizedSmartAlgorithm.hpp  OptimizedSmartAlgorithm2.cpp  OptimizedSmartAlgorithm2.hpp  OptimizedSmartAlgorithm3.cpp  OptimizedSmartAlgorithm3.hpp  OptimizedSmartAlgorithm4.cpp  OptimizedSmartAlgorithm4.hpp  OptimizedSmartAlgorithm5.cpp  OptimizedSmartAlgorithm5.hpp  OptimizedSmartAlgorithm6.cpp  OptimizedSmartAlgorithm6.hpp  OptimizedSmartAlgorithm7.cpp  OptimizedSmartAlgorithm7.hpp  StdSortAlgorithm.cpp  StdSortAlgorithm.hpp
test_files/: Rgn00.txt  Rgn01.txt  Rgn02.txt
